// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hides the footer 1`] = `
<div>
  <nav
    class="sc-bdVaJa jKGWHd"
  >
    <div
      class="sc-bwzfXH eRJmGz"
    >
      <a
        href="/"
        style="text-decoration: none; display: flex; align-items: center;"
      >
        <div
          class=" gatsby-image-wrapper"
          style="position: relative; overflow: hidden; width: 2rem; margin-right: 0.5rem;"
        >
          <div
            style="width: 100%; padding-bottom: 50%;"
          />
          <picture>
            <img
              alt=""
              sizes=""
              src=""
              srcset=""
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; object-position: center; opacity: 0; transition: opacity 0.5s;"
            />
          </picture>
          <noscript>
            &lt;picture&gt;&lt;img src="" alt="" style="position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
          </noscript>
        </div>
        <div
          class="sc-htpNat dJKuSC"
          data-testid="navigation-text-logo"
        >
          sprous
        </div>
      </a>
    </div>
    <div
      class="sc-EHOje kwwer"
    >
      <div
        class="sc-bZQynM fcrezd"
      />
      <a
        class="sc-gzVnrw dHCLGK"
        data-testid="navigation-bts-link"
        href="https://github.com/vantezzen/sprous"
      >
        Back to GitHub
      </a>
    </div>
  </nav>
  <div
    class="sc-jzJRlG UyfDp"
    data-testid="layout-content-outer-container"
  >
    <div
      class="sc-cSHVUG hqUmlR"
      data-testid="layout-content-inner-container"
    >
      <input
        class="sc-kAzzGY fCPUBj"
        data-testid="layout-search-field"
        placeholder="What can I help you with?"
        type="text"
        value=""
      />
      <main>
        <div
          style="margin-top: 2.5rem;"
        >
          <div
            class="sc-dnqmqq fSBJDa"
          >
            <div
              class="sc-chPdSV dwQFmq"
            >
              <svg
                fill="none"
                height="100%"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="width: 2.5rem; margin-right: 1rem; color: rgb(61, 72, 82);"
                viewBox="0 0 24 24"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="17"
                  y2="17"
                />
              </svg>
              ONE
            </div>
            <div
              class="markdown-content sc-kgoBCf dFwHdt"
              data-testid="article-content"
            >
              <div>
                ARTICLE
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`renders correctly 1`] = `
<div>
  <nav
    class="sc-bdVaJa jKGWHd"
  >
    <div
      class="sc-bwzfXH eRJmGz"
    >
      <a
        href="/"
        style="text-decoration: none; display: flex; align-items: center;"
      >
        <div
          class=" gatsby-image-wrapper"
          style="position: relative; overflow: hidden; width: 2rem; margin-right: 0.5rem;"
        >
          <div
            style="width: 100%; padding-bottom: 50%;"
          />
          <picture>
            <img
              alt=""
              sizes=""
              src=""
              srcset=""
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; object-position: center; opacity: 0; transition: opacity 0.5s;"
            />
          </picture>
          <noscript>
            &lt;picture&gt;&lt;img src="" alt="" style="position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
          </noscript>
        </div>
        <div
          class="sc-htpNat dJKuSC"
          data-testid="navigation-text-logo"
        >
          sprous
        </div>
      </a>
    </div>
    <div
      class="sc-EHOje kwwer"
    >
      <div
        class="sc-bZQynM fcrezd"
      />
      <a
        class="sc-gzVnrw dHCLGK"
        data-testid="navigation-bts-link"
        href="https://github.com/vantezzen/sprous"
      >
        Back to GitHub
      </a>
    </div>
  </nav>
  <div
    class="sc-jzJRlG UyfDp"
    data-testid="layout-content-outer-container"
  >
    <div
      class="sc-cSHVUG hqUmlR"
      data-testid="layout-content-inner-container"
    >
      <input
        class="sc-kAzzGY fCPUBj"
        data-testid="layout-search-field"
        placeholder="What can I help you with?"
        type="text"
        value=""
      />
      <main>
        <div
          style="margin-top: 2.5rem;"
        >
          <div
            class="sc-dnqmqq fSBJDa"
          >
            <div
              class="sc-chPdSV dwQFmq"
            >
              <svg
                fill="none"
                height="100%"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="width: 2.5rem; margin-right: 1rem; color: rgb(61, 72, 82);"
                viewBox="0 0 24 24"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="17"
                  y2="17"
                />
              </svg>
              ONE
            </div>
            <div
              class="markdown-content sc-kgoBCf dFwHdt"
              data-testid="article-content"
            >
              <div>
                ARTICLE
              </div>
            </div>
            <div
              class="markdown-content footer sc-kgoBCf dFwHdt"
              data-testid="article-footer"
            >
              <h1>
                FOOTER
              </h1>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
